--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,17 @@
 			<version>0.10.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>5.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>5.5.3</version>
+		</dependency>
+
 		<!-- Thanks for using https://jar-download.com -->
 
 	</dependencies>
