--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>5.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.18.2</version>
+		</dependency>
 
 		<!-- Thanks for using https://jar-download.com -->
 
